Flex-wrap, fixes

--- a/css/grid.css
+++ b/css/grid.css
@@ -35,7 +35,7 @@
   margin-bottom: 30px;
 }
 
-.work1 {
+.works-block {
   border: 1px dotted black;
   margin: 0 10px 30px 10px;
   min-height: 150px;
@@ -46,7 +46,7 @@
 }
 
 .image img { height: 150px; }
-.work1 p { margin: 10px 0 0 160px; }
+.works-block p { margin: 10px 0 0 160px; }
 
 .footer {
   padding: 0 30px 30px 30px;
@@ -54,7 +54,7 @@
 
 
 
-@media screen and (min-width: 975px) {
+@media screen and (min-width: 700px) {
 
   .header,
   .works {
@@ -62,6 +62,7 @@
     justify-content: space-around;
   }
 
+  .works { flex-wrap: wrap; }
   .header { flex-direction: row; }
   .menu { display: flex; margin-right: 50px; }
   .photo { margin-left: 50px; }
@@ -69,7 +70,7 @@
   .about-me { margin-bottom: 0; }
   .tags { width: 70%; margin-left: auto; margin-right: auto; }
 
-  .work1 {
+  .works-block {
     width: 225px;
     height: 225px;
   }
@@ -85,8 +86,8 @@
     margin-right: 50px;
   }
 
-  .work1 { margin: 0 10px 125px 10px; }
-  .work1 p { margin: 5px 0; }
+  .works-block { margin: 0 20px 125px; }
+  .works-block p { margin: 5px 0; }
 
 }
 
